@@ -36,3 +36,4 @@
 #define OPT_LAST 27
 #define OPT_VERBOSE 28
 #define OPT_SET_DEFAULT 29
+#define OPT_EXCLUDE 30
