@@ -1,0 +1,49 @@
+AT_SETUP([serve/pull with --exclude])
+AT_KEYWORDS([netsync])
+MONOTONE_SETUP
+NETSYNC_SETUP
+
+ADD_FILE(testfile, [1
+])
+COMMIT(branch1)
+B1=`BASE_REVISION`
+
+SET_FILE(testfile, [2
+])
+COMMIT(branch2)
+B2=`BASE_REVISION`
+
+ADD_FILE(testfile, [3
+])
+COMMIT(branch3)
+B3=`BASE_REVISION`
+
+SET_FILE(testfile, [4
+])
+COMMIT(branch4)
+B4=`BASE_REVISION`
+
+# Serve excluding branch2, branch4
+# attempting to pull them should fail
+# pulling everything but them should give revs B1, B2, B3; and only
+# give branch certs on B1, B3.
+
+NETSYNC_SERVE_START('*' --exclude=branch2 --exclude=branch4)
+
+NETSYNC_CLIENT_RUN(pull, 'branch*')
+AT_CHECK(MONOTONE2 cat revision $B1, [1], [ignore], [ignore])
+AT_CHECK(MONOTONE2 cat revision $B2, [1], [ignore], [ignore])
+AT_CHECK(MONOTONE2 cat revision $B3, [1], [ignore], [ignore])
+AT_CHECK(MONOTONE2 cat revision $B4, [1], [ignore], [ignore])
+
+NETSYNC_CLIENT_RUN(pull, 'branch*' --exclude=branch2 --exclude=branch4)
+AT_CHECK(MONOTONE2 cat revision $B1, [], [ignore], [ignore])
+AT_CHECK(MONOTONE2 cat revision $B2, [], [ignore], [ignore])
+AT_CHECK(MONOTONE2 cat revision $B3, [], [ignore], [ignore])
+AT_CHECK(MONOTONE2 cat revision $B4, [1], [ignore], [ignore])
+
+AT_CHECK(MONOTONE2 ls certs $B2 | grep -q branch2, [1])
+
+NETSYNC_SERVE_STOP
+
+AT_CLEANUP
