@@ -667,3 +667,4 @@ m4_include(tests/t_db_kill_branch_locally.at)
 m4_include(tests/t_netsync_globs.at)
 m4_include(tests/t_set_default.at)
 m4_include(tests/t_netsync_read_permissions.at)
+m4_include(tests/t_netsync_exclude.at)
